<resources>
    <string name="app_name">INTDV</string>
    <string name="connection_failure">It seems, you lost your internet connection</string>
    <string name="server_failure">Sorry, we are unable to fetch data</string>
    <string name="percentage">%</string>
    <string name="playing_now">Playing now</string>
    <string name="most_popular">Most popular</string>
    <string name="lbl_overview">Overview</string>
    <string name="search_movie">Search Movie</string>
    <string name="favourite_movies">Favourite Movies</string>
    <string name="favourite">Favourite</string>
    <string name="un_favourite">Un-favourite</string>
    <string name="you_do_not_have_any_favourite_movie">You don\'t have any favourite movie</string>
    <string name="cancel">Cancel</string>
    <string name="sort_by">Sort By</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="rating">Rating</string>
    <string name="high_to_low_rating">High to Low Rating</string>
    <string name="low_to_high_rating">Low to High Rating</string>
    <string name="loading">Loading…</string>
</resources>